<resources>
    <string name="app_name">NiubilityLibrary</string>

    <string name="text_contentDescription_image">imageView</string>

    <string name="accessibility_service_description">应用自动安装服务</string>

    <string name="text_login_vip">会员登录</string>
    <string name="tip_require_code_vip">请将会员码放至扫描区前</string>
    <string name="text_time_count_down">（120s）</string>

    <string name="text_tip_title">提示标题</string>
    <string name="text_tip_content">提示内容</string>

    <string name="text_sure">确定</string>
    <string name="text_cancel">取消</string>

    <string name="text_content_input">输入内容</string>

    <string name="text_choose_pay_mode">请选择支付方式</string>
    <string name="text_pay_face">刷脸支付</string>
    <string name="text_pay_code">扫码支付</string>
    <string name="text_pay_wechat">微信支付</string>
    <string name="text_scan_with_wechat">请使用微信扫码开门</string>

    <string name="text_not_enough_money">余额不足</string>

    <string name="text_kindly_reminder">温馨提示</string>

    <string name="text_error_code">70037</string>
    <string name="text_error_message">网络延迟，系统正在核算中\n请稍后再试（3s）</string>


    <!--配置-->
    <string name="key_config_return">key_config_return</string>
    <string name="key_environment">key_environment</string>
    <string name="key_ip_port">key_ip_port</string>

    <string-array name="attr_environment">
        <item>正式环境</item>
        <item>预发布环境</item>
        <item>测试环境</item>
    </string-array>
    <string-array name="values_environment">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="text_upgrade_immediately">立即更新</string>
    <string name="text_say_next_time">下次再说</string>
    <string name="text_upgrade_feature">升级特性</string>
    <string name="text_upgrade_info">升级信息</string>
    <string name="text_title">标题</string>
    <string name="text_upgrade_description">更新说明：</string>
    <string name="text_downloading">正在下载...</string>
    <string name="text_end_program">再按一次退出程序</string>

</resources>
