<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/x621"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_tip">

    <TextView
        android:id="@+id/textview_titile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y32"
        android:text="@string/text_not_enough_money"
        android:textColor="@color/color_D81B60"
        android:textSize="@dimen/x50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_titile"
        android:contentDescription="@string/text_contentDescription_image"
        app:srcCompat="@drawable/nomoney"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textview_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/y960"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y32"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:text="@string/app_name"
        android:textColor="@color/color_00BDA1"
        android:textSize="@dimen/x30"
        android:ellipsize="end"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_tip" />

    <TextView
        android:id="@+id/button_sure"
        android:layout_width="@dimen/x240"
        android:layout_height="@dimen/x60"
        android:layout_marginBottom="@dimen/y32"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y32"
        android:background="@drawable/bg_bt_sure"
        android:gravity="center"
        android:text="@string/text_sure"
        android:textColor="@color/color_00BDA1"
        android:textSize="@dimen/x30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_content" />

</androidx.constraintlayout.widget.ConstraintLayout>