<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_input"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tip_title"
        android:textSize="@dimen/x48"
        android:textStyle="bold"
        android:textColor="@color/color_333333"
        android:layout_marginTop="@dimen/y50"
        android:layout_marginStart="@dimen/y50"
        android:layout_marginEnd="@dimen/y50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:layout_marginStart="@dimen/y50"
        android:layout_marginEnd="@dimen/y50"
        android:text="@string/text_tip_content"
        android:textColor="@color/color_555555"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_tip_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y30"
        android:layout_marginStart="@dimen/y50"
        android:layout_marginEnd="@dimen/y50"
        android:textColor="@color/color_D81B60"
        android:textSize="@dimen/x30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/y50"
        android:layout_marginTop="@dimen/y10"
        android:layout_marginEnd="@dimen/y50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_et">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/x36" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/bt_negative"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x100"
        android:layout_marginTop="@dimen/y50"
        android:layout_marginBottom="@dimen/y50"
        android:text="@string/text_cancel"
        android:textSize="@dimen/x50"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_ripple_btn_wechat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_positive"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_positive"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x100"
        android:text="@string/text_sure"
        android:textSize="@dimen/x50"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_ripple_btn_wechat"
        app:layout_constraintTop_toTopOf="@id/bt_negative"
        app:layout_constraintStart_toEndOf="@id/bt_negative"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>