<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/x620"
    android:layout_height="@dimen/y780"
    android:background="@drawable/bg_dialog_code">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/x50"
        android:layout_height="@dimen/x50"
        android:layout_marginTop="@dimen/y30"
        android:layout_marginEnd="@dimen/x30"
        app:srcCompat="@drawable/close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pay_wechat"
        android:textSize="@dimen/x50"
        android:textColor="@color/color_333333"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/y80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_icon_title"/>

    <ImageView
        android:id="@+id/iv_icon_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/x10"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        app:layout_constraintDimensionRatio="h,1:1"
        app:srcCompat="@drawable/image_pay_wechat" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="@dimen/y20"
        android:layout_marginEnd="@dimen/x30"
        android:text="@string/text_scan_with_wechat"
        android:textColor="@color/color_555555"
        android:textSize="@dimen/x40"
        android:maxLines="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/iv_code"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/x300"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y50"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        app:srcCompat="@drawable/ic_default" />

    <ProgressBar
        android:id="@+id/pb_circle_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x150"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_code" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/y50"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/y50"
        android:text="@string/text_time_count_down"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/x40"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_code"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>